fix the clear icon from not showing up
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@19722 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_contacts.scss
+++ b/src/main/resources/scss/_contacts.scss
@@ -452,15 +452,17 @@ $over-color: #f4f3f3;
 					opacity: 0;
 				}
 				.clear {
-					display: none;
 					@include icon('clear_line');
 					position: absolute;
-					right: 5px;
+					top: 14px;
+					right: 10px;
 					left: auto;
+
 					margin: 0;
 					width: 16px;
 					height: 16px;
 					padding: 0;
+					border-width: 0;
 				}
 			}
 
